@@ -1,9 +1,12 @@
 # tests for win32gui
 import array
 import operator
+import sys
 import unittest
 
 import pywin32_testutil
+import pywintypes
+import win32api
 import win32gui
 
 
@@ -59,6 +62,151 @@ class TestPyGetMemory(unittest.TestCase):
         addr, buflen = c.buffer_info()
         got = win32gui.PyGetMemory(addr, buflen)
         self.assertRaises(TypeError, operator.setitem, got, 0, 1)
+
+
+class TestEnumWindowsFamily(unittest.TestCase):
+    @classmethod
+    def enum_callback_sle(cls, handle, data):
+        win32api.SetLastError(1)
+        return data
+
+    @classmethod
+    def enum_callback_exc(cls, handle, data):
+        raise ValueError()
+
+    @classmethod
+    def enum_callback(cls, handle, data):
+        return data
+
+    def setUp(self):
+        self.default_data_set = (None, -1, 0, 1, True, False)
+        self.type_data_set = ("", (), {})
+
+    def test_enumwindows(self):
+        win32api.SetLastError(0)
+        for data in (0, False):
+            self.assertRaises(
+                pywintypes.error, win32gui.EnumWindows, self.enum_callback_sle, data
+            )
+        for data in (None, 1, True):
+            self.assertIsNone(win32gui.EnumWindows(self.enum_callback_sle, data))
+        win32api.SetLastError(0)
+        for data in self.default_data_set:
+            self.assertIsNone(win32gui.EnumWindows(self.enum_callback, data))
+        for data in self.default_data_set:
+            self.assertRaises(
+                ValueError, win32gui.EnumWindows, self.enum_callback_exc, data
+            )
+        for func in (
+            self.enum_callback,
+            self.enum_callback_sle,
+        ):
+            for data in self.type_data_set:
+                self.assertRaises(TypeError, win32gui.EnumWindows, func, data)
+        if sys.version_info >= (3, 10):
+            for func in (
+                self.enum_callback,
+                self.enum_callback_sle,
+            ):
+                self.assertRaises(
+                    TypeError, win32gui.EnumWindows, func, self.enum_callback, 2.718282
+                )
+
+    def test_enumchildwindows(self):
+        win32api.SetLastError(0)
+        for data in self.default_data_set:
+            self.assertIsNone(win32gui.EnumChildWindows(None, self.enum_callback, data))
+        for data in self.default_data_set:
+            self.assertIsNone(
+                win32gui.EnumChildWindows(None, self.enum_callback_sle, data)
+            )
+        win32api.SetLastError(0)
+        for data in self.default_data_set:
+            self.assertRaises(
+                ValueError,
+                win32gui.EnumChildWindows,
+                None,
+                self.enum_callback_exc,
+                data,
+            )
+        for data in self.type_data_set:
+            for func in (
+                self.enum_callback,
+                self.enum_callback_sle,
+            ):
+                self.assertRaises(
+                    TypeError, win32gui.EnumChildWindows, None, func, data
+                )
+        if sys.version_info >= (3, 10):
+            for func in (
+                self.enum_callback,
+                self.enum_callback_sle,
+            ):
+                self.assertRaises(
+                    TypeError,
+                    win32gui.EnumChildWindows,
+                    None,
+                    func,
+                    self.enum_callback,
+                    2.718282,
+                )
+
+    def test_enumdesktopwindows(self):
+        win32api.SetLastError(0)
+        desktop = None
+        for data in (0, False):
+            self.assertRaises(
+                pywintypes.error,
+                win32gui.EnumDesktopWindows,
+                desktop,
+                self.enum_callback_sle,
+                data,
+            )
+        for data in (None, 1, True):
+            self.assertIsNone(
+                win32gui.EnumDesktopWindows(desktop, self.enum_callback_sle, data)
+            )
+        win32api.SetLastError(0)
+        for data in self.default_data_set:
+            self.assertIsNone(
+                win32gui.EnumDesktopWindows(desktop, self.enum_callback, data)
+            )
+        for data in self.default_data_set:
+            self.assertRaises(
+                ValueError,
+                win32gui.EnumDesktopWindows,
+                desktop,
+                self.enum_callback_exc,
+                data,
+            )
+        desktops = (0, None)
+        for desktop in desktops:
+            for data in self.default_data_set:
+                self.assertRaises(
+                    ValueError,
+                    win32gui.EnumDesktopWindows,
+                    desktop,
+                    self.enum_callback_exc,
+                    data,
+                )
+        for func in (
+            self.enum_callback,
+            self.enum_callback_sle,
+        ):
+            for desktop in desktops:
+                for data in self.type_data_set:
+                    self.assertRaises(
+                        TypeError, win32gui.EnumDesktopWindows, 0, func, data
+                    )
+        if sys.version_info >= (3, 10):
+            for func in (
+                self.enum_callback,
+                self.enum_callback_sle,
+            ):
+                for desktop in desktops:
+                    self.assertRaises(
+                        TypeError, win32gui.EnumDesktopWindows, 0, func, 2.718282
+                    )
 
 
 if __name__ == "__main__":
